# fundraiser

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: crud.py  database.py  dependencies.py  main.py
app/models/: projects.py  users.py
app/routers/: projects.py  users.py
app/schemas/: projects.py  users.py
templates/: index.html
tests/: test_users.py
