[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Iago Brayham <iagobrayhamcunha@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.25"
databases = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
develop = "app.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
